2015-03-03  Jiong Wang  <jiong.wang@arm.com>

	* binutils-all/arm/rvct_symbol.s: New testcase.
	* binutils-all/arm/objdump.exp: Run it.

2015-02-26  Andrew Burgess  <andrew.burgess@embecosm.com>

	* binutils-all/update-1.s: New file.
	* binutils-all/update-2.s: New file.
	* binutils-all/update-3.s: New file.
	* binutils-all/update-4.s: New file.
	* binutils-all/update-section.exp: New file.

2015-02-24  Nick Clifton  <nickc@redhat.com>

	* binutils-all/objcopy.exp: Skip the strip-10 test for the V850.

2015-01-01  Alan Modra  <amodra@gmail.com>

	Update year range in copyright notice of all files.

2014-12-26  Alan Modra  <amodra@gmail.com>

	* binutils-all/strip-11.d: New test.
	* binutils-all/objcopy.exp: Run it.

2014-12-06  Eric Botcazou  <ebotcazou@adacore.com>

	* binutils-all/objcopy.exp: Skip strip-10 for Visium.

2014-09-12  Andrew Bennett  <andrew.bennett@imgtec.com>

	* binutils-all/objcopy.exp: Add mips*-img-elf* target triple.
	* binutils-all/readelf.exp: Likewise

2014-09-06  Matthew Fortune  <matthew.fortune@imgtec.com>

	* binutils-all/readelf.ss-mips: Account for new sections.

2014-07-29  Matthew Fortune  <matthew.fortune@imgtec.com>

	* binutils-all/readelf.s: Account for .MIPS.abiflags and
	.gnu.attributes.
	* binutils-all/readelf.ss-tmips: Likewise.
	* binutils-all/strip-3.d: Likewise.

2014-07-10  Will Newton  <will.newton@linaro.org>

	* binutils-all/objcopy.exp: Disable the strip-10 test on
	non-EABI ARM configurations.

2014-06-03  Nick Clifton  <nickc@redhat.com>

	* binutils-all/ar.exp: Skip tests involving bfdtest1 and bfdtest2
	if these executables are not present.

2014-04-30  Nick Clifton  <nickc@redhat.com>

	* binutils-all/debug_str.s: New test.
	* binutils-all/debug_str.d: New test control file.
	* binutils-all/compress.exp: Run debug_str test.

2014-04-22  Christian Svensson  <blue@cmd.nu>

	* binutils-all/objcopy.exp: Remove openrisc and or32 support.  Add
	support for or1k.
	* binutils-all/objdump.exp: Likewise.